--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -59,7 +59,7 @@
 
                                 <mat-form-field appearance="outline" class="!w-[100%]">
                                     <mat-label>Birthdate</mat-label>
-                                    <input matInput [matDatepicker]="picker" type="date" formControlName="birthdate"
+                                    <input matInput [matDatepicker]="picker" formControlName="birthdate"
                                         placeholder="MM/DD/YYYY">
                                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                                     <mat-datepicker #picker></mat-datepicker>
