--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center h-[100vh] w-[100%]">
+<div class="lg:flex lg:items-center lg:h-[100vh] lg:w-[100%]">
 
     <div class="lg:flex lg:flex-row lg:gap-5 lg:items-start lg:w-[100%] lg:max-w-[1600px] lg:m-auto lg:px-14">
 
@@ -16,7 +16,7 @@
 
         <div class="p-1 md:p-5 lg:w-[60%] m-auto lg:p-10 lg:shadow-lg lg:border lg:rounded">
 
-            <div class="text-center py-3 !pt-10 lg:!pt-0 lg:hidden">
+            <div class="text-center py-3 !pt-10 lg:!pt-0 block lg:hidden">
                 <h1 class="!m-0 !font-bold !text-3xl">Sibut Medicare</h1>
                 <h3 class="text-slate-500">Create an account</h3>
                 <p>Already have account? <a class="underline text-blue-500" routerLink="/login">Login here</a></p>
