Terms & Conditions added

--- a/src/app/components/modal-terms-conditions/modal-terms-conditions.component.html
+++ b/src/app/components/modal-terms-conditions/modal-terms-conditions.component.html
@@ -1,1 +1,90 @@
-<p>modal-terms-conditions works!</p>
+<div class="w-[100%] max-w-[520px] shadow-lg p-5 pt-0">
+
+    <div mat-dialog-title>
+        <h1  class="!text-3xl font-semibold !m-0 text-center">Terms and Conditions</h1>
+        <h2 class="!text-md font-semibold text-center text-slate-500">Barangay Health Center</h2>
+    </div>
+
+    <mat-dialog-content class="mat-typography">
+
+        <p class="indent-10">These Terms and Conditions ("Agreement") govern the use and access of services provided by
+            the Barangay Health Center ("BHC") to the residents of the barangay. By availing any services or utilizing
+            the facilities offered by the BHC, you agree to comply with these Terms and Conditions. Please read this
+            Agreement carefully.
+        </p>
+
+        <h2 class="text-xl font-bold mb-2">1. General Obligations:</h2>
+        <ul class="list-disc ml-6 mb-6">
+            <li>The BHC shall provide primary healthcare services to the residents of the barangay, including
+                consultations, medical treatments, vaccinations, health education, and other related services.</li>
+            <li>The BHC shall strive to maintain a high standard of professionalism, confidentiality, and ethical
+                conduct in all interactions with patients.</li>
+            <li>Patients must provide accurate and complete information regarding their medical history, symptoms, and
+                any ongoing treatments, to ensure the appropriate care is provided.</li>
+            <li>Patients are responsible for following the instructions, treatment plans, and medications prescribed by
+                the healthcare professionals at the BHC.</li>
+        </ul>
+
+        <h2 class="text-xl font-bold mb-2">2. Appointments and Waiting Time:</h2>
+        <ul class="list-disc ml-6 mb-6">
+            <li>Patients are encouraged to schedule appointments in advance to ensure timely access to healthcare
+                services.</li>
+            <li>The BHC shall strive to adhere to the scheduled appointment time; however, unforeseen circumstances or
+                emergencies may cause delays. Patients are requested to be patient and understanding in such situations.
+            </li>
+            <li>Patients who arrive late for their scheduled appointments may be asked to reschedule or accommodated on
+                a best-effort basis, subject to the availability of the healthcare professionals.</li>
+        </ul>
+
+        <h2 class="text-xl font-bold mb-2">3. Fees and Charges:</h2>
+        <ul class="list-disc ml-6 mb-6">
+            <li>Consultation and basic healthcare services provided by the BHC may be offered free of charge, subject to
+                the policies and guidelines set by the local government.</li>
+            <li>Additional services, procedures, medications, or specialized treatments may incur charges as determined
+                by the BHC.</li>
+            <li>Patients shall be informed of any applicable fees or charges before availing specific services. Payment
+                must be made promptly upon completion of the service.</li>
+        </ul>
+
+        <h2 class="text-xl font-bold mb-2">4. Privacy and Confidentiality:</h2>
+        <ul class="list-disc ml-6 mb-6">
+            <li>The BHC respects the privacy and confidentiality of patients' personal and medical information.</li>
+            <li>Patient records and information shall be maintained securely and used only for the purpose of providing
+                healthcare services, as required by law.</li>
+            <li>Disclosure of patient information to third parties will only occur with the patient's informed consent,
+                or as mandated by law.</li>
+        </ul>
+
+        <h2 class="text-xl font-bold mb-2">5. Code of Conduct:</h2>
+        <ul class="list-disc ml-6 mb-6">
+            <li>Patients are expected to treat BHC staff and other patients with respect, dignity, and courtesy.</li>
+            <li>Any form of harassment, violence, or abusive behavior towards the BHC staff or other patients will not
+                be tolerated.</li>
+            <li>Patients are responsible for the proper use and care of BHC facilities and equipment. Any willful damage
+                or misuse may result in legal action or denial of services.</li>
+        </ul>
+
+        <h2 class="text-xl font-bold mb-2">6. Limitation of Liability:</h2>
+        <ul class="list-disc ml-6 mb-6">
+            <li>The BHC shall exercise reasonable care and skill in providing healthcare services. However, the BHC and
+                its staff shall not be liable for any direct, indirect, incidental, or consequential damages arising
+                from the use or inability to use the services, including medical treatments, provided by the BHC.</li>
+        </ul>
+
+        <h2 class="text-xl font-bold mb-2">7. Modification of Terms:</h2>
+        <ul class="list-disc ml-6 mb-6">
+            <li>The BHC reserves the right to modify or amend these Terms and Conditions at any time without prior
+                notice. Updated Terms and Conditions shall be posted prominently in the BHC premises or on its official
+                website.</li>
+        </ul>
+
+        <p class="mb-6">By availing the services of the Barangay Health Center, you acknowledge that you have read,
+            understood, and agreed to these Terms and Conditions. Failure to comply with these terms may result in the
+            denial of services or appropriate legal action, as deemed necessary.</p>
+
+        <p>If you have any questions or concerns about these Terms and Conditions, please contact the Barangay Health
+            Center administration for further clarification.</p>
+
+    </mat-dialog-content>
+
+</div>
