--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -35,7 +35,7 @@
     
                 <div class="text-[12px] text-slate-500">
                     <p class="font-semibold !m-0 !mt-5">Note:</p>
-                    <p>Accessing our application indicates that you have read and agreed to the <a class="underline text-blue-600 cursor-pointer">terms of use and conditions</a> of healthcare center.</p>
+                    <p>Accessing our application indicates that you have read and agreed to the <a class="underline text-blue-600 cursor-pointer" (click)="openTermsConditionsDialog()">terms of use and conditions</a> of healthcare center.</p>
                 </div>
             </form>
         </div>
