Forgot password with validation

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -25,8 +25,8 @@
                         }}</mat-icon>
                 </mat-form-field>
 
-                <div class="text-right mt-[-10px] mb-3">
-                    <a routerLink="">Forgot password?</a>
+                <div class="text-right mb-3">
+                    <a class="cursor-pointer hover:underline hover:text-blue-500" (click)="openForgotPasswordDialog()">Forgot password?</a>
                 </div>
     
                 <button mat-raised-button color="primary" class="w-[100%] !py-6">Login</button>
