--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -28,7 +28,7 @@
 
                 <mat-step [stepControl]="personalInfo">
                     <form [formGroup]="personalInfo">
-                        <ng-template matStepLabel>Personal Information</ng-template>
+                        <ng-template matStepLabel class="!text-red-500">Personal Information</ng-template>
 
                         <div class="py-3">
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
@@ -170,7 +170,7 @@
                             <mat-form-field appearance="outline" class="!w-[100%]">
                                 <mat-label>Password</mat-label>
                                 <input matInput placeholder="" type="{{ isPasswordVisible ? 'text' : 'password' }}" formControlName="password">
-                                <mat-icon matSuffix (click)="showPassword()">{{ isPasswordVisible ? "visibility" :
+                                <mat-icon *ngIf="this.accountInfo.get('password')?.value" matSuffix (click)="showPassword()">{{ isPasswordVisible ? "visibility" :
                                     "visibility_off"
                                     }}</mat-icon>
                             </mat-form-field>
