--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -11,7 +11,8 @@
         
         <div class="shadow-lg border rounded-sm p-8 w-[100%] max-w-[469px] md:!w-[50%] m-auto">
             <p class="font-semibold">Login credentials</p>
-    
+            <p class="text-red-500 font-semibold" *ngIf="!validCredentials">Invalid username or password</p>
+
             <form [formGroup]="loginCredentials" (ngSubmit)="submitLoginCredentials(loginCredentials)">
                 <mat-form-field appearance="outline" class="!w-[100%]">
                     <mat-label>Username</mat-label>
