--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -24,7 +24,7 @@
 
             <hr class="block lg:hidden">
 
-            <mat-vertical-stepper [linear]="false" #stepper>
+            <mat-vertical-stepper [linear]="true" #stepper>
 
                 <mat-step [stepControl]="personalInfo">
                     <form [formGroup]="personalInfo">
