--- a/src/app/components/modal-forgot-password/modal-forgot-password.component.html
+++ b/src/app/components/modal-forgot-password/modal-forgot-password.component.html
@@ -13,7 +13,7 @@
                 <input autocomplete="off" matInput placeholder="Ex. 09228215465" formControlName="contact_no">
             </mat-form-field>
 
-            <button mat-raised-button color="primary" class="!p-7" (click)="sendOTPCode()">Send OTP</button>
+            <button mat-raised-button color="primary" class="!p-7 !w-[100%]" (click)="sendOTPCode()" [disabled]="isbtnDisabled">{{ btnOTPSend }}</button>
         </div>
 
     </form>
@@ -32,7 +32,7 @@
         <form [formGroup]="passwordCredentials">
 
             <mat-form-field appearance="outline" class="!w-[100%]">
-                <mat-label>Password</mat-label>
+                <mat-label>New Password</mat-label>
                 <input matInput placeholder="" type="{{ isPasswordVisible ? 'text' : 'password' }}"
                     formControlName="password">
                 <mat-icon *ngIf="this.passwordCredentials.get('password')?.value" matSuffix (click)="showPassword()">{{
