Initial push for dashboard and employees

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
         <app-sidenav></app-sidenav>
     </ng-container>
     
-    <router-outlet [ngClass]="{'!p-10': auth.isAuth}"></router-outlet>
+    <router-outlet></router-outlet>
 </div>
