--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,38 @@
-<div class="py-10">
+<div class="relative top-10 py-10 px-5 w-[100vw] lg:pl-[280px]">
+    <app-header [title]="pageTitle"></app-header>
 
-    
 
+
+    <div class="flex flex-row flex-nowrap overflow-auto gap-3 mt-10 lg:overflow-hidden lg:flex-wrap lg:gap-5 lg:justify-center">
+        <div class="w-full min-w-[306px] max-w-[308px] !py-6 px-5 border shadow-xl rounded-lg box-border bg-slate-800 text-white">
+            <p class="!m-0 !mb-2 font-semibold text-xl">Total Patients</p>
+            <p class="!m-0 text-lg">10,234</p>
+        </div>
+        
+        <div class="w-full min-w-[306px] max-w-[308px] !py-6 px-5 border shadow-xl rounded-lg box-border bg-slate-800 text-white">
+            <p class="!m-0 !mb-2 font-semibold text-xl">Total Staff</p>
+            <p class="!m-0 text-lg">10,234</p>
+        </div>
+
+        <div class="w-full min-w-[306px] max-w-[308px] !py-6 px-5 border shadow-xl rounded-lg box-border bg-slate-800 text-white">
+            <p class="!m-0 !mb-2 font-semibold text-xl">Avg Patient/ day</p>
+            <p class="!m-0 text-lg">10,234</p>
+        </div>
+
+        <div class="w-full min-w-[306px] max-w-[308px] !py-6 px-5 border shadow-xl rounded-lg box-border bg-slate-800 text-white">
+            <p class="!m-0 !mb-2 font-semibold text-xl">Appointments Today</p>
+            <p class="!m-0 text-lg">10,234</p>
+        </div>
+
+        <div class="w-full min-w-[306px] max-w-[308px] !py-6 px-5 border shadow-xl rounded-lg box-border bg-slate-800 text-white">
+            <p class="!m-0 !mb-2 font-semibold text-xl">Missed Appointments</p>
+            <p class="!m-0 text-lg">10,234</p>
+        </div>
+    </div>
+
+
+    <h3 class="!font-semibold !text-2xl !mt-16">About</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti totam, provident animi vero, quia deserunt, nemo soluta optio modi alias a accusantium perspiciatis et sit sed mollitia quasi exercitationem. Molestiae assumenda cupiditate alias quos expedita?</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio impedit magnam eligendi quam fugit ut facilis delectus quas repudiandae temporibus. Repellat optio quisquam consectetur esse!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio impedit magnam eligendi quam fugit ut facilis delectus quas repudiandae temporibus. Repellat optio quisquam consectetur esse!</p>
 </div>
