--- a/src/app/components/modal/modal-forgot-password/modal-forgot-password.component.html
+++ b/src/app/components/modal/modal-forgot-password/modal-forgot-password.component.html
@@ -1,4 +1,4 @@
-<div class="w-[100%] max-w-[720px] shadow-lg p-5">
+<div class="w-[100%] max-w-[720px] max-h-[400px] overflow-auto shadow-lg p-5">
     <h1 class="!font-semibold">Forgot Password</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate dolores maxime commodi harum, ducimus
         placeat.</p>
