--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -50,7 +50,7 @@
 
                             <div class="grid grid-cols-1 md:grid-cols-3 gap-2">
                                 <mat-form-field appearance="outline" class="!w-[100%]">
-                                    <mat-label for="test">Select gender</mat-label>
+                                    <mat-label>Select gender</mat-label>
                                     <mat-select formControlName="gender">
                                         <mat-option value="Male">Male</mat-option>
                                         <mat-option value="Female">Female</mat-option>
