--- a/src/app/components/employee/manage-employee/manage-employee.component.html
+++ b/src/app/components/employee/manage-employee/manage-employee.component.html
@@ -9,31 +9,43 @@
         <table mat-table [dataSource]="dataSource" matSort>
 
             <!-- ID Column -->
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> ID </th>
-                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+            <ng-container matColumnDef="username">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Username </th>
+                <td mat-cell *matCellDef="let row"> {{row.username}} </td>
             </ng-container>
 
             <!-- Progress Column -->
-            <ng-container matColumnDef="progress">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Progress </th>
-                <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+            <ng-container matColumnDef="fullname">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Fullname </th>
+                <td mat-cell *matCellDef="let row"> {{row.fullname}} </td>
             </ng-container>
 
             <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Name </th>
-                <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Position </th>
+                <td mat-cell *matCellDef="let row"> {{row.position}} </td>
             </ng-container>
 
             <!-- Fruit Column -->
-            <ng-container matColumnDef="fruit">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Fruit </th>
-                <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+            <ng-container matColumnDef="date_created">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Date Created </th>
+                <td mat-cell *matCellDef="let row"> {{row.date_created}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Action </th>
+                <td mat-cell *matCellDef="let row"> 
+                    <div class="flex gap-2">
+                        <button mat-stroked-button class="!bg-[#198754] !text-white hover:!bg-green-800" (click)="openEditEmployee(row.id)"><fa-icon [icon]="faPencil"></fa-icon></button>
+                        <button mat-stroked-button class="!bg-red-700 !text-white hover:!bg-red-800" (click)="openArchiveEmployee(row.id)"><fa-icon [icon]="faTrashCan"></fa-icon></button>
+                    </div>
+                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns" class="!bg-[#3f51b5] !font-bold !text-white"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+
 
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
