--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,3 +44,32 @@ body {
         height: 100vh;
     }
 }
+
+
+:root {
+    --primary-color: #153d77;
+    --secondary-color: #6c757d;
+    --white-color: #fff;
+    --success-color: #198754;
+    --delete-color: #b91c1c;
+    --background-color: #f2f2f2;
+}
+
+.danger-snackbar {
+    color: white;
+    --mdc-snackbar-container-color: var(--delete-color);
+
+    .mat-simple-snackbar-action {
+        color: white;
+    }
+}
+
+
+.success-snackbar {
+    color: white;
+    --mdc-snackbar-container-color: var(--success-color);
+
+    .mat-simple-snackbar-action {
+        color: white;
+    }
+}
