--- a/src/app/components/employee/manage-employee/manage-employee.component.html
+++ b/src/app/components/employee/manage-employee/manage-employee.component.html
@@ -2,31 +2,22 @@
 
     <mat-form-field appearance="outline" class="!w-full md:max-w-[300px] float-right">
         <mat-label>Search employee</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
+        <input matInput (keyup)="applyFilter($event)" placeholder="ID, Name, Username, Position" #input>
     </mat-form-field>
 
     <div class="overflow-x:auto;">
         <table mat-table [dataSource]="dataSource" matSort>
 
-            <!-- ID Column -->
-            <ng-container matColumnDef="username">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Username </th>
-                <td mat-cell *matCellDef="let row"> {{row.username}} </td>
-            </ng-container>
-
-            <!-- Progress Column -->
             <ng-container matColumnDef="fullname">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Fullname </th>
                 <td mat-cell *matCellDef="let row"> {{row.fullname}} </td>
             </ng-container>
 
-            <!-- Name Column -->
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Position </th>
                 <td mat-cell *matCellDef="let row"> {{row.position}} </td>
             </ng-container>
 
-            <!-- Fruit Column -->
             <ng-container matColumnDef="date_created">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Date Created </th>
                 <td mat-cell *matCellDef="let row"> {{row.date_created}} </td>
@@ -45,9 +36,6 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns" class="!bg-[#3f51b5] !font-bold !text-white"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-
-
-            <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
                 <td class="mat-cell" colspan="4">
                     <p class="!m-0 !py-3 bg-slate-300 text-center">No data matching the filter "{{input.value}}"</p>
