--- a/src/app/components/appointments/pending-appointments/pending-appointments.component.html
+++ b/src/app/components/appointments/pending-appointments/pending-appointments.component.html
@@ -42,8 +42,8 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Action </th>
                 <td mat-cell *matCellDef="let row"> 
                     <div class="flex gap-2">
-                        <button mat-stroked-button class="!bg-[#198754] !text-white hover:!bg-green-800"><fa-icon [icon]="faCheck"></fa-icon></button>
-                        <button mat-stroked-button class="!bg-red-700 !text-white hover:!bg-red-800"><fa-icon [icon]="faXmark"></fa-icon></button>
+                        <button mat-stroked-button class="!bg-[#198754] !text-white hover:!bg-green-800" (click)="approveAppointment(row.id)"><fa-icon [icon]="faCheck"></fa-icon></button>
+                        <button mat-stroked-button class="!bg-red-700 !text-white hover:!bg-red-800" (click)="declineAppointment(row.id)"><fa-icon [icon]="faXmark"></fa-icon></button>
                     </div>
                 </td>
             </ng-container>
