--- a/src/app/components/appointments/declined-appointments/declined-appointments.component.html
+++ b/src/app/components/appointments/declined-appointments/declined-appointments.component.html
@@ -1,8 +1,8 @@
 <div class="py-5">
 
     <mat-form-field appearance="outline" class="!w-full md:max-w-[300px] float-right">
-        <mat-label>Search employee</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="ID, Name, Username, Position" #input>
+        <mat-label>Search Patient</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Patient name" #input>
     </mat-form-field>
 
     <div class="overflow-x: auto;">
@@ -28,6 +28,12 @@
                 <td mat-cell *matCellDef="let row"> {{row.medical_reason}} </td>
             </ng-container>
 
+            
+            <ng-container matColumnDef="decline_reason">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Decline Reason </th>
+                <td mat-cell *matCellDef="let row"> {{row.decline_reason}} </td>
+            </ng-container>
+
             <ng-container matColumnDef="statusName">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Status </th>
                 <td mat-cell *matCellDef="let row"> {{row.statusName}} </td>
@@ -45,7 +51,7 @@
 
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">
+                <td class="mat-cell" colspan="6">
                     <p class="!m-0 !py-3 bg-slate-300 text-center">No data matching the filter "{{input.value}}"</p>
                 </td>
             </tr>
