--- a/src/app/components/modal/modal-archive-employee/modal-archive-employee.component.html
+++ b/src/app/components/modal/modal-archive-employee/modal-archive-employee.component.html
@@ -1,6 +1,6 @@
 <div class="w-[100%] max-w-[520px] shadow-lg p-5">
     
-    <h1 class="font-semibold">Are you sure you want to delete {{ data.employeeUsername }}'s account?</h1>
+    <h1 class="font-semibold">Are you sure you want to delete {{ data.employeeFullname }}'s account?</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum, amet optio vitae numquam laudantium nisi vel mollitia minima, sunt facilis libero beatae commodi architecto doloribus?</p>
 
     <div class="flex flex-row items-center justify-end gap-3 mt-5">
