--- a/src/app/components/modal/modal-edit-employee/modal-edit-employee.component.html
+++ b/src/app/components/modal/modal-edit-employee/modal-edit-employee.component.html
@@ -42,7 +42,7 @@
         </div>
 
         
-        <button mat-raised-button color="primary" class="!w-full !p-7" [mat-dialog-close]="employeeCredentials.value">Submit</button>
+        <button mat-raised-button color="primary" class="!w-full !p-7" [disabled]="employeeCredentials.invalid" [mat-dialog-close]="employeeCredentials.value">Submit</button>
 
     </form>
 
