--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,3 +73,35 @@ body {
         color: white;
     }
 }
+
+
+
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+tr:nth-of-type(odd) {
+    background: #eee;
+}
+
+th {
+    background: #333;
+    color: white;
+    font-weight: bold;
+}
+
+td,
+th {
+    padding: 6px 15px;
+    text-align: left;
+}
+
+tr {
+    border: 1px solid #f5f5f5;
+}
+
+tr:hover {
+    background-color: #d0d0d0 !important;
+}
