--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-row items-center justify-between fixed !w-full p-5 bg-slate-900 text-white lg:hidden z-10">
-    <h3 class="!m-0">Baranggay Medicare</h3>
+    <h3 class="!m-0">Barangay Medicare</h3>
     <fa-icon [icon]="faBars" (click)="navToggle()"></fa-icon>
 </div>
 
