--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -16,12 +16,12 @@
             <form [formGroup]="loginCredentials" (ngSubmit)="submitLoginCredentials(loginCredentials.value)">
                 <mat-form-field appearance="outline" class="!w-[100%]">
                     <mat-label>Username</mat-label>
-                    <input matInput placeholder="" formControlName="username">
+                    <input matInput placeholder="" formControlName="username" autocomplete="on">
                 </mat-form-field>
     
                 <mat-form-field appearance="outline" class="!w-[100%]">
                     <mat-label>Password</mat-label>
-                    <input matInput placeholder="" type="{{ isPasswordVisible ? 'text' : 'password' }}" formControlName="password">
+                    <input matInput placeholder="" type="{{ isPasswordVisible ? 'text' : 'password' }}" formControlName="password" autocomplete="on">
                     <mat-icon *ngIf="this.loginCredentials.get('password')?.value" matSuffix (click)="showPassword()">{{ isPasswordVisible ? "visibility" : "visibility_off"
                         }}</mat-icon>
                 </mat-form-field>
