--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -32,7 +32,5 @@
 
 
     <h3 class="!font-semibold !text-2xl !mt-16">About</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti totam, provident animi vero, quia deserunt, nemo soluta optio modi alias a accusantium perspiciatis et sit sed mollitia quasi exercitationem. Molestiae assumenda cupiditate alias quos expedita?</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio impedit magnam eligendi quam fugit ut facilis delectus quas repudiandae temporibus. Repellat optio quisquam consectetur esse!</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio impedit magnam eligendi quam fugit ut facilis delectus quas repudiandae temporibus. Repellat optio quisquam consectetur esse!</p>
+    <p>Welcome to SibutMedicare where you can now collect, view, and edit your patients' information through this website. Nurse and Staffs of Sibut healthcare center can also view and accept the patients’ appointment request in this website. </p>
 </div>
