--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -4,9 +4,7 @@
         <div class="py-0 px-3 md:px-8 md:w-[50%]">
             <img class="hidden md:block m-auto mb-5 w-[200px] md:w-[300px] lg:w-[400px]" src="../../../assets/images/undraw_medicine_b-1-ol.svg" alt="">
             <h1 class="!text-2xl !font-bold text-center md:text-left">Sibut Medicare</h1>
-            <p class="hidden md:block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique velit voluptas, iusto cupiditate mollitia harum consequatur eligendi! Alias eveniet quam pariatur dolor eum? Quae, rerum.</p>
-
-            <p class="!mb-0 hidden md:block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, iure?.</p>
+            <p class="hidden md:block">Welcome to SibutMedicare where you can now collect, view, and edit your patients’ information through this website. Nurse and Staffs of Sibut healthcare center can also view and accept the patients' appointment request in this website. </p>
         </div>
         
         <div class="shadow-lg border rounded-sm p-8 w-[100%] max-w-[469px] md:!w-[50%] m-auto">
