--- a/src/app/components/modal/modal-forgot-password/modal-forgot-password.component.html
+++ b/src/app/components/modal/modal-forgot-password/modal-forgot-password.component.html
@@ -1,7 +1,6 @@
 <div class="w-[100%] max-w-[720px] max-h-[400px] overflow-auto shadow-lg p-5">
     <h1 class="!font-semibold">Forgot Password</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate dolores maxime commodi harum, ducimus
-        placeat.</p>
+    <p>Please enter your active cellphone number and we will send you a One Time Password (OTP).</p>
 
     <hr>
 
@@ -27,7 +26,7 @@
         <hr>
 
         <h3 class="!font-semibold text-xl !mt-4 !mb-0">Enter new password</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Please create your new password.</p>
 
         <form [formGroup]="passwordCredentials">
 
