--- a/src/app/components/modal/modal-edit-employee/modal-edit-employee.component.html
+++ b/src/app/components/modal/modal-edit-employee/modal-edit-employee.component.html
@@ -1,6 +1,6 @@
 <div class="w-[100%] shadow-lg p-5">
 
-    <h1 class="!font-semibold">Forgot Password</h1>
+    <h1 class="!font-semibold">Update Employee</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate dolores maxime commodi harum, ducimus placeat.</p>
     <hr>
 
