api calls update

--- a/src/app/components/account/personal-info/personal-info.component.html
+++ b/src/app/components/account/personal-info/personal-info.component.html
@@ -48,11 +48,11 @@
                         <mat-form-field appearance="outline" class="!w-[100%]">
                             <mat-label>Martial Status</mat-label>
                             <mat-select formControlName="marital_status">
-                                <mat-option value="Male">Single</mat-option>
-                                <mat-option value="Female">Married</mat-option>
-                                <mat-option value="Female">Widowed</mat-option>
-                                <mat-option value="Female">Divorced</mat-option>
-                                <mat-option value="Female">Seperated</mat-option>
+                                <mat-option value="Single">Single</mat-option>
+                                <mat-option value="Married">Married</mat-option>
+                                <mat-option value="Widowed">Widowed</mat-option>
+                                <mat-option value="Divorced">Divorced</mat-option>
+                                <mat-option value="Seperated">Seperated</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </div>
