--- a/src/app/pages/record/record.component.html
+++ b/src/app/pages/record/record.component.html
@@ -1,3 +1,5 @@
+<app-loading-screen *ngIf="isLoading"></app-loading-screen>
+
 <div class="relative top-10 py-10 px-5 w-[100vw] lg:pl-[280px]">
     <app-header [title]="pageTitle"></app-header>
     <p class="!mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem a nostrum tempore eum libero magni modi quam, distinctio quae beatae porro, laudantium dolor fugiat voluptatum.</p>
@@ -16,41 +18,41 @@
     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Full Name:</p>
-                        <p class="!m-0">Darwin B. Labiste</p>
+                        <p class="!m-0 capitalize">{{patientInfo.personalInfo.firstname}} {{patientInfo.personalInfo.middlename}} {{patientInfo.personalInfo.lastname}}</p>
                     </div>
     
     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Gender:</p>
-                        <p class="!m-0">Male</p>
+                        <p class="!m-0 capitalize">{{patientInfo.personalInfo.gender}}</p>
                     </div>
     
     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Marital Status:</p>
-                        <p class="!m-0">Single</p>
+                        <p class="!m-0 capitalize">{{patientInfo.personalInfo.marital_status}}</p>
                     </div>
     
     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Contact No:</p>
-                        <p class="!m-0">09278285895</p>
+                        <p class="!m-0 capitalize">{{patientInfo.contactInfo.contact_no}}</p>
                     </div>
     
     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Birthdate:</p>
-                        <p class="!m-0">March 20, 2000 (23 years old)</p>
+                        <p class="!m-0">{{ patientInfo.personalInfo.birthdate | date:'dd/MM/yyyy' }}</p>
                     </div>
     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Email:</p>
-                        <p class="!m-0 !whitespace-pre">personal.darwinlabiste@gmail.com</p>
+                        <p class="!m-0 !whitespace-pre">{{patientInfo.contactInfo.email}}</p>
                     </div>
     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Address:</p>
-                        <p class="!m-0">Imus, Cavite</p>
+                        <p class="!m-0 capitalize">{{patientInfo.contactInfo.address}}</p>
                     </div>
     
                 </div>
@@ -62,17 +64,12 @@
     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Fullname:</p>
-                        <p class="!m-0">Fe Vilma B. Labiste</p>
+                        <p class="!m-0 capitalize">{{patientInfo.emergencyContactInfo.contact_fullname}}</p>
                     </div>
     
                     <div class="flex flex-row gap-2 items-center">
-                        <p class="!m-0 !font-bold">Relationship:</p>
-                        <p class="!m-0">Mother</p>
-                    </div>
-                    
-                    <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Contact No:</p>
-                        <p class="!m-0">09278285895</p>
+                        <p class="!m-0 capitalize">{{patientInfo.emergencyContactInfo.emegency_contact_no}}</p>
                     </div>
     
                 </div>
@@ -84,32 +81,32 @@
                     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Height</p>
-                        <p class="!m-0">09278285895</p>
+                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.height ? '-- Not yet set --' : patientInfo.medicalInfo.height}}</p>
                     </div>
                     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Weight</p>
-                        <p class="!m-0">09278285895</p>
+                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.weight ? '-- Not yet set --' : patientInfo.medicalInfo.weight}}</p>
                     </div>
                     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Blood Pressure</p>
-                        <p class="!m-0">0927828589</p>
+                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.blood_pressure ? '-- Not yet set --' : patientInfo.medicalInfo.blood_pressure }}</p>
                     </div>
     
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Blood Type</p>
-                        <p class="!m-0">0927828589</p>
+                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.blood_type ? '-- Not yet set --' : patientInfo.medicalInfo.blood_type }}</p>
                     </div>
     
                     <div class="flex flex-col gap-2 items-start">
                         <p class="!m-0 !font-bold">Disablity</p>
-                        <p class="!m-0">-- No disablity --</p>
+                        <p class="!m-0">{{ !patientInfo.medicalInfo.disability ? '-- No Disability --' : patientInfo.medicalInfo.disability }}</p>
                     </div>
     
                     <div class="flex flex-col gap-2 items-start">
                         <p class="!m-0 !font-bold">Contagious Disease</p>
-                        <p class="!m-0">-- No Disease --</p>
+                        <p class="!m-0">{{ !patientInfo.medicalInfo.contagious_disease ? '-- No Disease --' : patientInfo.medicalInfo.contagious_disease }}</p>
                     </div>
                 </div>
             </div>
