--- a/src/app/components/appointments/all-appointments/all-appointments.component.html
+++ b/src/app/components/appointments/all-appointments/all-appointments.component.html
@@ -10,12 +10,12 @@
 
             <ng-container matColumnDef="patientFullname">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Patient </th>
-                <td mat-cell *matCellDef="let row"> {{row.patientFullname}} </td>
+                <td mat-cell *matCellDef="let row" class="capitalize"> {{row.patient_fullname}} </td>
             </ng-container>
 
             <ng-container matColumnDef="appointed_time">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Appointed Time </th>
-                <td mat-cell *matCellDef="let row"> {{row.appointed_time}} </td>
+                <td mat-cell *matCellDef="let row" [ngClass]="{ 'text-red-600': row.appointed_time === null }"> {{row.appointed_time || 'Not yet set' }} </td>
             </ng-container>
 
             <ng-container matColumnDef="appointed_date">
@@ -31,15 +31,15 @@
             <ng-container matColumnDef="statusName">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Status </th>
                 <td mat-cell *matCellDef="let row"> 
-                    <div class="!px-4 !py-2 !w-fit rounded text-[#ffffff]" [ngClass]="{'bg-slate-300 text-black': row.status === 1, 'bg-[#3f51b5]' : row.status === 2, 'bg-[#198754]' : row.status === 3 , 'bg-red-600' : row.status === 0 }">
-                        {{row.statusName}}
+                    <div class="!px-4 !py-2 !w-fit rounded text-[#ffffff]" [ngClass]="{'bg-slate-300 text-black': row.status === 1, 'bg-[#3f51b5]' : row.status === 2, 'bg-[#198754]' : row.status === 4 , 'bg-red-600' : row.status === 3 }">
+                        {{row.status_name}}
                     </div>    
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="date_created">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Date Created </th>
-                <td mat-cell *matCellDef="let row"> {{row.date_created | date:'MMMM dd, YYYY HH:mm a' }} </td>
+                <td mat-cell *matCellDef="let row"> {{row.appointment_records_date_created | date:'MMMM dd, YYYY HH:mm a' }} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns" class="!bg-[#3f51b5] !font-bold !text-white"></tr>
