--- a/src/app/components/appointments/pending-appointments/pending-appointments.component.html
+++ b/src/app/components/appointments/pending-appointments/pending-appointments.component.html
@@ -10,12 +10,12 @@
 
             <ng-container matColumnDef="patientFullname">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Patient </th>
-                <td mat-cell *matCellDef="let row"> {{row.patientFullname}} </td>
+                <td mat-cell *matCellDef="let row" class="capitalize"> {{row.patient_fullname}} </td>
             </ng-container>
 
             <ng-container matColumnDef="appointed_time">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Appointed Time </th>
-                <td mat-cell *matCellDef="let row"> {{row.appointed_time}} </td>
+                <td mat-cell *matCellDef="let row" [ngClass]="{ 'text-red-600': row.appointed_time === null }"> {{row.appointed_time || 'Not yet set' }} </td>
             </ng-container>
 
             <ng-container matColumnDef="appointed_date">
@@ -30,12 +30,12 @@
 
             <ng-container matColumnDef="statusName">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Status </th>
-                <td mat-cell *matCellDef="let row"> {{row.statusName}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.status_name}} </td>
             </ng-container>
 
             <ng-container matColumnDef="date_created">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Date Created </th>
-                <td mat-cell *matCellDef="let row"> {{row.date_created | date:'MMMM dd, YYYY HH:mm a'}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.appointment_records_date_created | date:'MMMM dd, YYYY HH:mm a'}} </td>
             </ng-container>
 
             <ng-container matColumnDef="action">
