--- a/src/app/pages/pagenotfound/pagenotfound.component.html
+++ b/src/app/pages/pagenotfound/pagenotfound.component.html
@@ -1,5 +1,5 @@
 <div class="not-found-container">
     <h1>404</h1>
     <p>Page Not Found</p>
-    <a routerLink="/">Go to back to main page</a>
+    <a routerLink="/">Go back to main page</a>
   </div>
